--- a/task-01/index.html
+++ b/task-01/index.html
@@ -43,6 +43,17 @@
                     </button>
                 </div>
             </header>
+              <div class="title-block__cont">
+                <h1 class="title-block__title">
+                    COURSES OF EXCELLENT <br> QUALITY
+                </h1>
+                <p class="title-block__text">
+                    We know how large objects will act, but things on a 
+                    <br> small scale just do not act that way.
+                </p>
+                <button class="title-block__btn btn">Join Us</button>
+            </div>
+
         </section>
     </main>
 
